--- a/index.html
+++ b/index.html
@@ -287,7 +287,7 @@
 
   <!-- Audio para efectos de sonido -->
   <audio id="blockSound" preload="auto">
-    <source src="block-place.mp3" type="audio/mpeg">
+    <source src="audio.mpeg" type="audio/mpeg">
     Tu navegador no soporta audio HTML5.
   </audio>
 
