--- a/index.html
+++ b/index.html
@@ -1,157 +1,103 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Tetris Offline</title>
   <style>
     body {
       margin: 0;
       background: #222;
       color: white;
-      font-family: Arial, sans-serif;
+      font-family: Arial;
       overflow: hidden;
-      text-align: center;
-      touch-action: manipulation;
     }
-
-    #game-container {
-      display: flex;
-      justify-content: center;
-      gap: 20px;
-      margin-top: 10px;
-      flex-wrap: wrap;
-    }
-
     canvas {
+      display: block;
+      margin: 20px auto;
       background: #111;
       border: 2px solid #555;
-    }
-
-    #side-panel {
-      display: flex;
-      flex-direction: column;
-      width: 100px;
-    }
-
-    #next-piece, #hold-piece {
-      background: #111;
-      border: 2px solid #555;
-      height: 80px;
-      margin-bottom: 20px;
-    }
-
-    #stats {
-      margin-top: 10px;
-      font-size: 14px;
-    }
-
-    #mobile-controls {
-      display: flex;
-      justify-content: center;
-      flex-wrap: wrap;
-      gap: 10px;
-      margin-top: 10px;
-    }
-
-    #mobile-controls button {
-      padding: 10px 16px;
-      font-size: 18px;
-      border: none;
-      border-radius: 10px;
-      background: #444;
-      color: white;
-      font-weight: bold;
     }
   </style>
 </head>
 <body>
-  <h1>Tetris Offline</h1>
-
-  <div id="game-container">
-    <div id="side-panel">
-      <div>NEXT:</div>
-      <canvas id="next-piece" width="80" height="80"></canvas>
-      <div>HOLD:</div>
-      <canvas id="hold-piece" width="80" height="80"></canvas>
-      <div id="stats">
-        <div>Puntos: <span id="score-display">0</span></div>
-        <div>Nivel: <span id="level-display">1</span></div>
-        <div>Líneas: <span id="lines-display">0</span></div>
-      </div>
-    </div>
-    <canvas id="tetris" width="240" height="400"></canvas>
-  </div>
-
-  <!-- Controles móviles -->
-  <div id="mobile-controls">
-    <button onclick="move(-1)">←</button>
-    <button onclick="rotatePiece()">⟳</button>
-    <button onclick="move(1)">→</button>
-    <button onclick="fastDrop = true; setTimeout(() => fastDrop = false, 100);">↓</button>
-    <button onclick="holdCurrentPiece()">Hold</button>
-  </div>
-
+  <canvas id="tetris" width="240" height="400"></canvas>
   <script>
     const canvas = document.getElementById('tetris');
     const ctx = canvas.getContext('2d');
-    const nextCanvas = document.getElementById('next-piece');
-    const nextCtx = nextCanvas.getContext('2d');
-    const holdCanvas = document.getElementById('hold-piece');
-    const holdCtx = holdCanvas.getContext('2d');
+    const scale = 20;
+    ctx.scale(scale, scale);
 
-    ctx.scale(20, 20);
-    nextCtx.scale(10, 10);
-    holdCtx.scale(10, 10);
-
-    const arena = Array(20).fill().map(() => Array(12).fill(0));
+    const arena = createMatrix(12, 20);
     const colors = {
-      I: '#00ffff', O: '#ffff00', T: '#aa00ff',
-      S: '#00ff00', Z: '#ff0000', J: '#0000ff', L: '#ff8800'
+      'I': '#00ffff',
+      'O': '#ffff00',
+      'T': '#aa00ff',
+      'S': '#00ff00',
+      'Z': '#ff0000',
+      'J': '#0000ff',
+      'L': '#ff8800'
     };
 
-    let currentPiece, nextPiece, holdPiece = null, canHold = true;
-    let dropCounter = 0, lastTime = 0;
-    let score = 0, level = 1, lines = 0;
-    let dropInterval = 1000, fastDrop = false;
-    let gameOver = false, isPaused = false;
+    let dropCounter = 0;
+    let dropInterval = 1000;
+    let lastTime = 0;
+    let gameOver = false;
+    let isPaused = false;
+    let fastDrop = false;
+
+    const tetrominos = [
+      { shape: [[0, 0, 0, 0],[1, 1, 1, 1],[0, 0, 0, 0],[0, 0, 0, 0]], type: 'I' },
+      { shape: [[1, 1],[1, 1]], type: 'O' },
+      { shape: [[0, 1, 0],[1, 1, 1],[0, 0, 0]], type: 'T' },
+      { shape: [[0, 1, 1],[1, 1, 0],[0, 0, 0]], type: 'S' },
+      { shape: [[1, 1, 0],[0, 1, 1],[0, 0, 0]], type: 'Z' },
+      { shape: [[1, 0, 0],[1, 1, 1],[0, 0, 0]], type: 'J' },
+      { shape: [[0, 0, 1],[1, 1, 1],[0, 0, 0]], type: 'L' }
+    ];
+
+    let currentPiece = createPiece();
+
+    function createMatrix(w, h) {
+      const matrix = [];
+      while (h--) matrix.push(new Array(w).fill(0));
+      return matrix;
+    }
 
     function createPiece() {
-      const types = 'IJLOSTZ';
-      const type = types[Math.floor(Math.random() * types.length)];
-      const shapes = {
-        I: [[0,0,0,0],[1,1,1,1],[0,0,0,0],[0,0,0,0]],
-        O: [[1,1],[1,1]],
-        T: [[0,1,0],[1,1,1],[0,0,0]],
-        S: [[0,1,1],[1,1,0],[0,0,0]],
-        Z: [[1,1,0],[0,1,1],[0,0,0]],
-        J: [[1,0,0],[1,1,1],[0,0,0]],
-        L: [[0,0,1],[1,1,1],[0,0,0]],
-      };
+      const piece = tetrominos[Math.floor(Math.random() * tetrominos.length)];
       return {
-        type,
-        shape: shapes[type],
+        shape: piece.shape,
+        type: piece.type,
         x: 4,
         y: 0
       };
     }
 
-    function drawMatrix(matrix, offset, type, context, scale = 1) {
+    function drawMatrix(matrix, offset, type = null) {
       matrix.forEach((row, y) => {
         row.forEach((value, x) => {
           if (value !== 0) {
-            context.fillStyle = colors[type];
-            context.fillRect((x + offset.x) * scale, (y + offset.y) * scale, scale, scale);
-            context.strokeStyle = '#000';
-            context.strokeRect((x + offset.x) * scale, (y + offset.y) * scale, scale, scale);
+            ctx.fillStyle = colors[type || value];
+            ctx.fillRect(x + offset.x, y + offset.y, 1, 1);
+          }
+        });
+      });
+    }
+
+    function merge(arena, piece) {
+      piece.shape.forEach((row, y) => {
+        row.forEach((value, x) => {
+          if (value !== 0) {
+            arena[y + piece.y][x + piece.x] = piece.type;
           }
         });
       });
     }
 
     function collide(arena, piece) {
-      for (let y = 0; y < piece.shape.length; y++) {
-        for (let x = 0; x < piece.shape[y].length; x++) {
+      for (let y = 0; y < piece.shape.length; ++y) {
+        for (let x = 0; x < piece.shape[y].length; ++x) {
           if (piece.shape[y][x] !== 0 &&
               (arena[y + piece.y] && arena[y + piece.y][x + piece.x]) !== 0) {
             return true;
@@ -161,69 +107,27 @@
       return false;
     }
 
-    function merge(arena, piece) {
-      piece.shape.forEach((row, y) => {
-        row.forEach((value, x) => {
-          if (value !== 0) arena[y + piece.y][x + piece.x] = piece.type;
-        });
-      });
-    }
-
-    function clearLines() {
-      let count = 0;
-      outer: for (let y = arena.length - 1; y >= 0; y--) {
-        for (let x = 0; x < arena[y].length; x++) {
-          if (arena[y][x] === 0) continue outer;
-        }
-        arena.splice(y, 1);
-        arena.unshift(Array(12).fill(0));
-        count++;
-      }
-      if (count > 0) {
-        const points = [0, 100, 300, 500, 800][count] * level;
-        score += points;
-        lines += count;
-        level = Math.floor(lines / 10) + 1;
-        dropInterval = Math.max(100, 1000 - level * 50);
-        updateStats();
-      }
-    }
-
     function rotate(matrix) {
       return matrix[0].map((_, i) => matrix.map(row => row[i]).reverse());
     }
 
     function rotatePiece() {
-      const shape = rotate(currentPiece.shape);
-      const oldX = currentPiece.x;
-      for (let offset of [0, 1, -1, 2, -2]) {
-        currentPiece.x = oldX + offset;
-        currentPiece.shape = shape;
-        if (!collide(arena, currentPiece)) return;
+      const original = currentPiece.shape;
+      currentPiece.shape = rotate(currentPiece.shape);
+      if (collide(arena, currentPiece)) {
+        currentPiece.shape = original;
       }
-      currentPiece.shape = rotate(rotate(rotate(shape))); // revert
-      currentPiece.x = oldX;
     }
 
-    function holdCurrentPiece() {
-      if (!canHold) return;
-      if (holdPiece) {
-        [currentPiece, holdPiece] = [holdPiece, currentPiece];
-      } else {
-        holdPiece = currentPiece;
-        currentPiece = nextPiece;
-        nextPiece = createPiece();
+    function clearLines() {
+      outer: for (let y = arena.length - 1; y >= 0; --y) {
+        for (let x = 0; x < arena[y].length; ++x) {
+          if (arena[y][x] === 0) continue outer;
+        }
+        const row = arena.splice(y, 1)[0].fill(0);
+        arena.unshift(row);
+        ++y;
       }
-      currentPiece.x = 4;
-      currentPiece.y = 0;
-      canHold = false;
-      drawHold();
-    }
-
-    function drawHold() {
-      holdCtx.clearRect(0, 0, holdCanvas.width, holdCanvas.height);
-      if (!holdPiece) return;
-      drawMatrix(holdPiece.shape, {x: 1, y: 1}, holdPiece.type, holdCtx, 10);
     }
 
     function drop() {
@@ -232,9 +136,7 @@
         currentPiece.y--;
         merge(arena, currentPiece);
         clearLines();
-        currentPiece = nextPiece;
-        nextPiece = createPiece();
-        canHold = true;
+        currentPiece = createPiece();
         if (collide(arena, currentPiece)) {
           gameOver = true;
         }
@@ -242,98 +144,64 @@
       dropCounter = 0;
     }
 
-    function move(dir) {
-      currentPiece.x += dir;
-      if (collide(arena, currentPiece)) currentPiece.x -= dir;
+    function update(time = 0) {
+      const deltaTime = time - lastTime;
+      lastTime = time;
+      dropCounter += deltaTime;
+      if (dropCounter > (fastDrop ? 50 : dropInterval)) {
+        drop();
+      }
+
+      if (!gameOver && !isPaused) {
+        draw();
+        requestAnimationFrame(update);
+      } else if (gameOver) {
+        ctx.fillStyle = 'red';
+        ctx.font = '1px Arial';
+        ctx.fillText('Game Over', 3, 10);
+      }
     }
 
     function draw() {
       ctx.fillStyle = '#111';
       ctx.fillRect(0, 0, canvas.width, canvas.height);
-      drawMatrix(arena, {x: 0, y: 0}, null, ctx);
-      drawMatrix(currentPiece.shape, currentPiece, currentPiece.type, ctx);
-      nextCtx.clearRect(0, 0, nextCanvas.width, nextCanvas.height);
-      drawMatrix(nextPiece.shape, {x: 1, y: 1}, nextPiece.type, nextCtx, 10);
+      drawMatrix(arena, { x: 0, y: 0 });
+      drawMatrix(currentPiece.shape, currentPiece, currentPiece.type);
     }
 
-    function updateStats() {
-      document.getElementById('score-display').textContent = score;
-      document.getElementById('level-display').textContent = level;
-      document.getElementById('lines-display').textContent = lines;
-    }
-
-    function update(time = 0) {
-      const delta = time - lastTime;
-      lastTime = time;
-      if (!gameOver && !isPaused) {
-        dropCounter += delta;
-        const interval = fastDrop ? Math.max(20, 100 - level * 10) : dropInterval;
-        if (dropCounter > interval) drop();
+    function move(dir) {
+      currentPiece.x += dir;
+      if (collide(arena, currentPiece)) {
+        currentPiece.x -= dir;
       }
-      draw();
-      if (gameOver) {
-        ctx.fillStyle = 'red';
-        ctx.font = '2px Arial';
-        ctx.textAlign = 'center';
-        ctx.fillText('GAME OVER', 6, 10);
-        return;
-      }
-      requestAnimationFrame(update);
     }
 
     document.addEventListener('keydown', e => {
-      if (gameOver) return;
-      if (e.key === 'ArrowLeft') move(-1);
-      else if (e.key === 'ArrowRight') move(1);
-      else if (e.key === 'ArrowDown' || e.key === ' ') fastDrop = true;
-      else if (e.key === 'ArrowUp') rotatePiece();
-      else if (e.key === 'Shift') holdCurrentPiece();
-      else if (e.key === 'p' || e.key === 'P') {
+      if (['ArrowLeft', 'ArrowRight', 'ArrowDown', 'ArrowUp', ' '].includes(e.key)) {
+        e.preventDefault();
+        if (!gameOver && !isPaused) {
+          if (e.key === 'ArrowLeft') move(-1);
+          else if (e.key === 'ArrowRight') move(1);
+          else if (e.key === 'ArrowDown') fastDrop = true;
+          else if (e.key === 'ArrowUp' || e.key === ' ') rotatePiece();
+        }
+      } else if (e.key === 'p' || e.key === 'P') {
         isPaused = !isPaused;
         if (!isPaused) update();
       }
     });
 
     document.addEventListener('keyup', e => {
-      if (e.key === 'ArrowDown' || e.key === ' ') fastDrop = false;
+      if (e.key === 'ArrowDown') fastDrop = false;
     });
 
-    // Soporte táctil móvil
-    let startX, startY;
-    canvas.addEventListener('touchstart', e => {
-      const touch = e.touches[0];
-      startX = touch.clientX;
-      startY = touch.clientY;
-    }, {passive: false});
-
-    canvas.addEventListener('touchend', e => {
-      const dx = e.changedTouches[0].clientX - startX;
-      const dy = e.changedTouches[0].clientY - startY;
-      if (Math.abs(dx) > Math.abs(dy)) {
-        if (dx > 10) move(1);
-        else if (dx < -10) move(-1);
-      } else {
-        if (dy > 10) fastDrop = true;
-        else if (dy < -10) rotatePiece();
-      }
-      setTimeout(() => fastDrop = false, 100);
-    }, {passive: false});
-
-    function init() {
-      currentPiece = createPiece();
-      nextPiece = createPiece();
-      updateStats();
-      update();
-    }
-
-    // Service Worker
     if ('serviceWorker' in navigator) {
       navigator.serviceWorker.register('sw.js')
-        .then(() => console.log('SW registrado'))
-        .catch(err => console.log('SW error:', err));
+        .then(() => console.log('Service Worker registrado'))
+        .catch(err => console.log('Error al registrar SW:', err));
     }
 
-    init();
+    update();
   </script>
 </body>
 </html>
